--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -8,34 +8,10 @@
 
         <div class="row">
             <div class="col-6 offset-3"></div>
-            {{!-- mesagens --}}
-            {{#condicionalIgualdade situacao "okCadastro"}}
-                <div class="alert alert-success">Produto Cadastrado com Sucesso</div>
-            {{/condicionalIgualdade}}
-     
-            {{!-- mesagens  edicao--}}
-            {{#condicionalIgualdade situacao "okEdicao"}}
-                <div class="alert alert-success">Produto Editado com Sucesso</div>
-            {{/condicionalIgualdade}}
-     
-            {{!-- mesagens  remover --}}
-            {{#condicionalIgualdade situacao "okRemover"}}
-                <div class="alert alert-success">Produto Removido com Sucesso</div>
-            {{/condicionalIgualdade}}
 
-                        {{#condicionalIgualdade situacao "falhaCadastro"}}
-                            <div class="alert alert-danger">Falha ao cadastrar produto tente novamente</div>
-                        {{/condicionalIgualdade}}
-                
-                        {{!-- mesagens  edicao--}}
-                        {{#condicionalIgualdade situacao "falhaEdicao"}}
-                            <div class="alert alert-danger">Falha ao editar produto tente novamente</div>
-                        {{/condicionalIgualdade}}
-                
-                        {{!-- mesagens  remover --}}
-                        {{#condicionalIgualdade situacao "falhaRemover"}}
-                            <div class="alert alert-danger">Falha ao remover produto tente novamente</div>
-                        {{/condicionalIgualdade}}
+
+            {{!-- mesagens --}}
+           {{>mesagens}}
                 
      
             <form action="/cadastrar" method="post" enctype="multipart/form-data">
