--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,11 +8,13 @@
     {{!--bootstrap --}}
     
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 
      {{!--css  chama o arquivo dentro da pasta css--}}
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
+    {{>menu}}
     {{{body}}}
 </body>
 </html>
