--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,3 +35,20 @@ form img{
 .alert{
     margin-top: 30px;
 }
+/* Remover margem do formulário */
+.formularioPesquisa{
+    margin: 0;
+}
+
+/* Estrutura do formulário de pesquisa (barra de navegação) */
+.formularioPesquisa input,
+.formularioPesquisa input[type="submit"]
+{
+    margin: 0;
+}
+
+/* Configurar o dropdown para ser exibido quando passar o cursor sobre o link */
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+}
